Sat Feb 28 15:42:22 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tools/static_configurator/Static_Assembly_Visitors.cpp:
	 
	  Fixed a couple of small errors. But this file still doeasn't
	  compile with gcc 3.3.2. Sending Venkita note. 

Fri Feb 27 11:35:41 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Fixed code generation errors reported by Edward Mulholland 
          <emulholl@atl.lmco.com>.

Thu Feb 26 14:21:48 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CIAOTAO.mwc:

	  An mwc file for CIAO with its dependencies on ACE+TAO. Folks can
	  now run $ACE_ROOT/bin/mwc.pl CIAOTAO.mwc in $CIAO_ROOT and
	  invoke "make" from $CIAO_ROOT. Thanks to Brian Mendel and Ed
	  Mulholland for motivating this.

Tue Feb 24 18:00:44 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Deployment.idl:          Removed
	* DnC/DnC_Deployment.idl
	* DnC/DnC_Element.idl
	* DnC/DnC_Resource.idl

	  Deployment.idl is splited into 3 parts now.

Mon Feb 23 15:04:26 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Added generation of a top-level namespaces with the name
	  derived from composition. Plus all the necessary modifications
	  in generated code to adopt this scheme.

Mon Feb 23 13:54:19 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIDLC/CIDLC.vcproj:

	Added ".\Literals.cpp" into the project.

Mon Feb 23 13:34:20 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CIDLC/CIDLC.vcproj:

	  Reversed the change.

Thu Feb 19 11:07:35 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/index.html:

	  Added the parts listing area. Added a few relative links.

Wed Feb 18 13:05:35 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/SemanticGraph/Name.cpp:

	  Added missing header inclusion.

Wed Feb 18 10:43:54 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/index.html:

	 Added the tutorial section in this file.
